@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellarEditor"
-        mc:Ignorable="d"
-        Title="Stellar Engine" Height="450" Width="800">
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
+        Title="Stellar Engine" Height="500" Width="800">
     <Grid>
 
     </Grid>
