@@ -1,0 +1,29 @@
+﻿<UserControl x:Class="StellarEditor.ProjectManager.NewProjectView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:StellarEditor.ProjectManager"
+             mc:Ignorable="d" Width="650"
+             d:DesignHeight="450" d:DesignWidth="800">
+    <StackPanel Orientation="Horizontal" Background="LightGray">
+        <StackPanel VerticalAlignment="Center" Width="250">
+            <ListBox Height="300" Width="200" Margin="10,10,10,10"/>
+        </StackPanel>
+        <StackPanel VerticalAlignment="Center" Width="400" Height="450">
+            <Image Height="200" Width="200" Margin="0,80,0,0"/>
+            <StackPanel Orientation="Horizontal" Margin="0,10,5,0">
+                <TextBlock Text="Name" Width="35"/>
+                <TextBox Width="320" Margin="10,0,0,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,10,5,0">
+                <TextBlock Text="Path" Width="35"/>
+                <TextBox Width="270" Margin="10,0,0,0"/>
+                <Button Content="Browse" FontSize="10" Width="40" Margin="10,0,0,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Height="115">
+                <Button Content="Create" FontSize="18" Width="80" Margin="285,0,0,50" VerticalAlignment="Bottom" IsEnabled="False"/>
+            </StackPanel>
+        </StackPanel>
+    </StackPanel>
+</UserControl>
