@@ -1,0 +1,13 @@
+﻿<UserControl x:Class="StellarEditor.ProjectManager.OpenProjectView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:StellarEditor.ProjectManager"
+             mc:Ignorable="d" Width="650"
+             d:DesignHeight="450" d:DesignWidth="650">
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Background="LightGray">
+        <TextBlock Text="Created Projects" HorizontalAlignment="Center" Margin="10,10,10,2" FontSize="18"/>
+        <ListBox Width="600" Height="350" HorizontalAlignment="Center" Margin="10"/>
+    </StackPanel>
+</UserControl>
