@@ -1,0 +1,22 @@
+﻿<Window x:Class="StellarEditor.ProjectManager.ProjectSelectorDialog"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:StellarEditor.ProjectManager"
+        mc:Ignorable="d" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        Title="Project Selector" Height="450" Width="850">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Vertical" Background="DimGray" Width ="200">
+            <ToggleButton Content="New Project" x:Name="newProjectButton" FontSize="28" Margin="10,190,10,0" Click="OnButtonClicked" IsChecked="False"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Background="LightGray" Width="650">
+            <local:OpenProjectView x:Name="openProjectScreen"/>
+            <local:NewProjectView x:Name="newProjectScreen"/>
+        </StackPanel>
+    </Grid>
+</Window>
